--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,400i,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
     <link rel="stylesheet" href="./assets/style.css">
     <title>Weather-Dashboard</title>
@@ -11,14 +12,14 @@
 
 <body>
 
-    <div class='container'>
-        <div class='navbar'>
-            <h1 class='app-title'>The Traveler's Forecast</h1>
+    <div class="container">
+        <div class="navbar">
+            <h1 class="header">The Traveler's Forecast</h1>
         </div>
-        <div class="content">
+        <div class="flex-row min-100vh">
             <div class="search-content">
-                <h2>Search for a City:</h2>
-                <div class="search-input">
+                <h2 class="app-title">Search for a City:</h2>
+                <div class="search-location">
                     <input class="input" type="text"></input>
                     <button type="submit" class="btn"><i class="fas fa-search fa-lg"></i></button>
                 </div>
@@ -27,10 +28,16 @@
                 </div>
             </div>
             <div class="forecast-content">
+                <div class="current-forecast">
 
+                </div>
+                <div>
+                    <h2 class="forecast-title">5-Day Forecast</h2>
+                </div>
+                <div class="future-forecast">
+
+                </div>
             </div>
-
-
         </div>
     </div>
 
