made changes to style and framework and corrected errors

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="navbar">
             <h1 class="header">The Traveler's Forecast</h1>
         </div>
-        <div class="flex-row min-100vh">
+        <div class="main-content">
             <div class="search-content">
                 <h2 class="app-title">Search for a City:</h2>
                 <div class="search-location">
@@ -31,8 +31,8 @@
                 <div class="current-forecast">
 
                 </div>
-                <div>
-                    <h2 class="forecast-title">5-Day Forecast</h2>
+                <div class="forecast-title">
+                    
                 </div>
                 <div class="future-forecast">
 
